--- a/Sobre.html
+++ b/Sobre.html
@@ -36,7 +36,7 @@ Experience, ​Solution In Easy Steps Successful life, ​The core of my work, H
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta name="referrer" content="origin"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-path-to-root="./" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="sec-b613"><div class="u-align-left u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="sec-b613"><div class="u-align-left u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD" role="navigation">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-hamburger-link-1" href="#" tabindex="-1" aria-label="Open menu" aria-controls="0f9d">
@@ -94,10 +94,7 @@ Experience, ​Solution In Easy Steps Successful life, ​The core of my work, H
               <div class="u-align-left u-container-align-left u-container-style u-layout-cell u-shape-rectangle u-size-28 u-layout-cell-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="0">
                 <div class="u-container-layout u-valign-middle u-container-layout-2">
                   <h1 class="u-align-left u-text u-text-1">Em que Cremos ?</h1>
-                  <p class="u-align-left u-text u-text-2">Images from <a href="https://www.freepik.com" class="u-active-none u-border-1 u-border-active-palette-2-light-1 u-border-hover-palette-2-light-1 u-border-no-left u-border-no-right u-border-no-top u-border-white u-btn u-button-link u-button-style u-hover-none u-none u-text-active-palette-2-light-1 u-text-body-alt-color u-text-hover-palette-2-light-1 u-btn-1">Freepik</a>
-                  </p>
-                  <a href="" class="u-active-palette-2-dark-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-dark-1 u-palette-1-base u-radius u-btn-2">work with us&nbsp;&nbsp;<span class="u-file-icon u-icon u-text-white u-icon-1"><img src="images/152352-c9848c63.png" alt=""></span>
-                  </a>
+                  <a href="" class="u-active-palette-2-dark-1 u-border-none u-btn u-btn-round u-button-style u-hover-palette-2-dark-1 u-palette-1-base u-radius u-btn-1">saiba mais </a>
                 </div>
               </div>
             </div>
