--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   <meta name="referrer" content="origin"><meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./" data-include-products="true" class="u-body u-clearfix u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="sec-b613"><div class="u-align-left u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
+  <body data-home-page="Página-Inicial.html" data-home-page-title="Página Inicial" data-path-to-root="./" data-include-products="false" class="u-body u-clearfix u-xl-mode" data-lang="pt"><header class="u-clearfix u-header" id="sec-b613"><div class="u-align-left u-clearfix u-sheet u-valign-middle-sm u-valign-middle-xs u-sheet-1">
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD" role="navigation">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;">
             <a class="u-button-style u-custom-active-border-color u-custom-active-color u-custom-border u-custom-border-color u-custom-borders u-custom-hover-border-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-color u-custom-text-decoration u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-hamburger-link u-nav-link u-hamburger-link-1" href="#" tabindex="-1" aria-label="Open menu" aria-controls="0f9d">
